--- a/page2.css
+++ b/page2.css
@@ -61,58 +61,74 @@ padding:0; margin:0;}
     font-size: 34px;
     color: #555555;
     padding-top: 35px;
+    letter-spacing: -0.04; 
 }
 .bold-text{
     font-weight: bold;
 }
 
-
-
 .border-bot{
-    padding-bottom:40px;
+   
+        padding-bottom:40px;
     border-bottom: 4px dotted #cccccc;
 }
-.services{display: flex; flex:row;color:white;
-padding-top: 42px;
+
+
+.services{
+    display: flex; 
+    justify-content: space-between;
+    color:white;
+    padding-top: 42px;
 }
 .services-form{
    
     width: 280px;
     min-height: 350px;
     background-color: #00aeef; /*0076a3*/
-    margin-right: 60px;
+    box-shadow: 6px 6px 10px #c7c7c7; 
+}
+.invite-form{
+    padding: 34px 23px;
+}
 
-}
-.services3{
-    margin-right: 0px;
-}
 .serv-title{
-    font-size: 40px;
-    
-text-align: center;
+    font-size: 40px;    
+    text-align: center;
+    font-family: 'Times New Roman', Times, serif;
+ /*   padding-top: 35px;*/
+    padding-bottom: 24px;
+    border-bottom: 2px dotted white;
 }
 .serv-text{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
-
-    text-align: center;}
+    line-height: 1.5em; 
+    text-align: center;
+    padding-top: 27px;
+    padding-bottom: 33px;}
 
 .blue-btn{ display: block;
-    border:1px solid 195c74;
+    border:2px solid #195c74;
     font-size: 18px;
-width: 230px;
-height:40px ;
-background-color: #0076a3;
-color:white;
-text-align: center;
-
+    font-family: 'Times New Roman', Times, serif;
+    width: 228px;
+    height:40px ;
+    background-color: #0076a3;    
+    text-align: center;
+}
+.centr-text{
+    margin:  10px;
 }
 
 
-.bottom-content {
 
+
+.bottom-content {
     display: flex;
-    flex-direction: row;width:475px;}
+    flex-direction: row;
+    width:475px;
+    margin-top:36px;
+}
 .client-testimonials, .f-proj
 {
 min-width:475px;
@@ -123,3 +139,86 @@ min-width:475px;
     flex-direction: column;
     border-right:  4px dotted #cccccc;
 }
+
+
+
+
+.square{
+    min-width:84px;
+    min-height:84px;
+    background-color: #cccccc;
+  
+}
+.text-col{
+    display: flex;
+    flex-direction: column;
+    
+    font-size: 14px;
+    font-family: Arial, Helvetica, sans-serif;
+    color:#555555;
+}
+.testimonial{
+    display: flex;
+    flex-direction: row;
+    
+}
+.testimonial:nth-child(1)
+{
+    background-color: red;
+   /* margin-top:30px;*/
+}
+
+.testimonial:nth-child(2){   
+     margin-top:30px;}
+
+.testimonial:nth-child(3){   
+     margin-top:33px;}
+.testimonial:nth-child(4){  
+     margin-top:38px;}
+
+/*
+.cl-text{
+    font-size: 14px;
+    font-family: Arial, Helvetica, sans-serif;
+
+}*/
+.fullname{
+    font-weight: bold;
+    color:#555555;
+}
+.position{
+    color:#00aeef;
+}
+.title-client-test{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 24px;
+}
+
+.f-proj{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    color:#555555;
+}
+.title-proj{
+    font-size: 24px;
+}
+.name-prog{
+    font-size: 20px;
+    color: #888888;
+}
+.details-link{
+    color:#00aeef;
+}
+
+/*
+.testimonial:nth-of-type(2){
+    background-color: red;
+   /* margin-top:30px;
+} (2-4)*/
+/*
+.testimonial:nth-child(2){   background-color: yellow; margin-top:30px;}
+
+.testimonial:nth-child(3){   background-color: blue; margin-top:30px;}
+.testimonial:nth-child(4){   background-color: red; margin-top:30px;}
+
+*/
