--- a/page2.css
+++ b/page2.css
@@ -51,7 +51,7 @@
     list-style: none; 
     display:flex; 
     flex-direction: row;
-    vertical-align: bottom;
+    vertical-align: bottom;     text-align: left;   
 }
 .href-discription{
     color: #eeeeee;    
@@ -187,6 +187,7 @@
 .text-col{
     padding-left: 27px;
 }
+
 .fullname{
     font-weight: bold;
     color:#555555;
@@ -196,6 +197,7 @@
 .position{  
     font-weight: normal;
     color:#00aeef;
+    text-decoration: none;
 }
 .title-client-test{
     font-family: 'Times New Roman', Times, serif;
@@ -235,3 +237,4 @@
     font-size: 16px;
     margin-top: 19px;
 }
+
